// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code actions should disable rules for a specific line with a comment on the previous line 1`] = `
"a {
  /* stylelint-disable-next-line value-keyword-case */
  display: BLOCK;
  /* stylelint-disable-next-line comment-no-empty */
  color: #00;
}
"
`;

exports[`Code actions should disable rules for a specific line with a comment on the same line 1`] = `
"a {
  display: BLOCK; /* stylelint-disable-line value-keyword-case */
  /* stylelint-disable-next-line comment-no-empty */
  color: #00;
}
"
`;

exports[`Code actions should disable rules for an entire file 1`] = `
"/* stylelint-disable value-keyword-case */
a {
  display: BLOCK;
  /* stylelint-disable-next-line comment-no-empty */
  color: #00;
}
"
`;

exports[`Code actions should disable rules for an entire file with a shebang 1`] = `
"#!/usr/bin/env node
/* stylelint-disable color-no-invalid-hex */
/* eslint-disable node/shebang */
'use strict';

const css = css\`
	.foo {
		color: #00;
	}
\`;
"
`;

exports[`Code actions should provide code actions for problems 1`] = `
[
  {
    "edit": [
      [
        "<uri>",
        [
          {
            "newEol": undefined,
            "newText": "  /* stylelint-disable-next-line value-keyword-case */
",
            "range": [
              {
                "character": 0,
                "line": 1,
              },
              {
                "character": 0,
                "line": 1,
              },
            ],
          },
        ],
      ],
    ],
    "isPreferred": undefined,
    "kind": _ {
      "value": "quickfix",
    },
    "title": "Disable value-keyword-case for this line",
  },
  {
    "edit": [
      [
        "<uri>",
        [
          {
            "newEol": undefined,
            "newText": "/* stylelint-disable value-keyword-case */
",
            "range": [
              {
                "character": 0,
                "line": 0,
              },
              {
                "character": 0,
                "line": 0,
              },
            ],
          },
        ],
      ],
    ],
    "isPreferred": undefined,
    "kind": _ {
      "value": "quickfix",
    },
    "title": "Disable value-keyword-case for the entire file",
  },
  {
    "command": {
      "arguments": [
        {
          "uri": "https://stylelint.io/user-guide/rules/value-keyword-case",
        },
      ],
      "command": "stylelint.openRuleDoc",
      "title": "Open documentation for value-keyword-case",
    },
    "isPreferred": undefined,
    "kind": _ {
      "value": "quickfix",
    },
    "title": "Show documentation for value-keyword-case",
  },
]
`;

exports[`Code actions should run auto-fix action on save 1`] = `
"a {
  display: block;
  /* stylelint-disable-next-line comment-no-empty */
   color: #00;
}
"
`;
